k8s/appointment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-app
  template:
    metadata:
      labels:
        app: appointment-app
    spec:
      serviceAccountName: ecr-puller
      containers:
        - name: appointment-service
          image: 154767946691.dkr.ecr.us-east-1.amazonaws.com/use-cases:appointment
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: ecr-pull-secret
