k8s/appointment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
