k8s/patient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
